--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "rewards_program",
+  "homepage": "https://DmitryD7.github.io/rewards_program",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
