--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "rewards_program",
-  "homepage": "https://DmitryD7.github.io/rewards_program",
+  "homepage": "http://DmitryD7.github.io/rewards_program",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server .",
-    "build": "webpack ."
+    "build": "webpack .",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "gh-pages": "^6.0.0",
     "html-webpack-plugin": "^5.5.3",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
